tests/ui/weird_edge_cases/template_tag_in_eval_mode.stderr
error: template tags are not supported in eval mode
 --> tests/ui/weird_edge_cases/template_tag_in_eval_mode.rs:5:9
  |
5 |         [<eval>]
  |         ^^^^^^^^
